<?xml version="1.0"?>
<package format="2">
  <name>hero_chassis_controller</name>
  <version>0.1.0</version>
  <description>Hero robot Chassis controller.</description>
  <maintainer email="1656438881@qq.com">WiseL00k</maintainer>
  <license>BSD</license>
  <author email="1656438881@qq.com">WiseL00k</author>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- build_depend: dependencies only used in source files -->
  <build_depend>boost</build_depend>
  <!-- depend: build, export, and execution dependency -->
  <depend>eigen</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>forward_command_controller</depend>
  <depend>pluginlib</depend>
  <depend>rm_description</depend>
  <build_depend>roslint</build_depend>

  <export>
    <controller_interface plugin="${prefix}/hero_chassis_controller_plugins.xml"/>
  </export>
</package>
